--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,3 +7,7 @@ homePageTitle=Simple App UI5
 
 # Staff List
 staffListTitle=Персонал
+columnLastName=Фамилия
+columnFirstName=Имя
+columnMiddleName=Отчество
+columnStatus=Статус
