--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,4 +10,9 @@ staffListTitle=Персонал
 columnLastName=Фамилия
 columnFirstName=Имя
 columnMiddleName=Отчество
+columnAddress=Адрес
 columnStatus=Статус
+
+# Detail Page
+detailPageTitle=Подробная информация
+detailTitle=Сотрудник
